Implementación para calcular las rutas más óptimas para llegar a un cierto destino

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -11,10 +11,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <fragment android:id="@+id/autocomplete_fragment"
+    <fragment
+        android:id="@+id/autocomplete_fragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_round"
         android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
-        android:queryHint="Buscar destino..."/>
+    />
+
 </RelativeLayout>
