--- a/app/src/main/res/layout/layout_list_view_row_items.xml
+++ b/app/src/main/res/layout/layout_list_view_row_items.xml
@@ -2,17 +2,41 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_gravity="center">
 
-    <TextView
-        android:id="@+id/text_view_item_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:textSize="15dp"
-        android:gravity="center"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"/>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:gravity="center">
 
+        <TextView
+            android:id="@+id/text_view_nombre_ruta"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textSize="18dp"
+            android:gravity="center"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"/>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <View
+            android:id="@+id/view_color_ruta"
+            android:layout_width="100dp"
+            android:layout_height="3dp"
+            android:background="#E91E63" />
+
+    </LinearLayout>
 </LinearLayout>
