--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -18,4 +18,13 @@
         android:layout_height="wrap_content"
         android:background="@drawable/bg_round" />
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_margin="20dp"
+        android:layout_alignParentBottom="true"
+        android:text="@string/ver_rutas"/>
+
+
 </RelativeLayout>
