Se implementó la funcionalidad para cuando se presione el botón 'Ver Rutas' se muestre una lista con todas las rutas existentes en la base de datos.

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -19,6 +19,7 @@
         android:background="@drawable/bg_round" />
 
     <Button
+        android:id="@+id/ver_rutas"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
