--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -23,37 +23,46 @@
         android:id="@+id/ver_rutas"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_margin="20dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:text="@string/ver_rutas"/>
+        android:layout_gravity="bottom"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="@color/ic_launcher_background"
+        android:text="@string/ver_rutas" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/botonInfoRuta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="27dp"
+        android:layout_above="@+id/ver_rutas"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="@color/ic_launcher_background"
         android:clickable="true"
+        android:contentDescription="@string/verInfoRuta"
         android:focusable="true"
         android:visibility="gone"
+        app:backgroundTint="@color/ic_launcher_background"
+        app:rippleColor="@color/white"
         app:srcCompat="@android:drawable/ic_dialog_info"
-        android:contentDescription="@string/verInfoRuta" />
+        app:tint="@android:color/white" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardInfoRutas"
         android:layout_width="wrap_content"
-        android:layout_height="164dp"
-        android:layout_above="@+id/ver_rutas"
+        android:layout_height="150dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="26dp"
-        android:layout_marginTop="108dp"
+        android:layout_marginTop="90dp"
         android:layout_marginEnd="27dp"
-        android:layout_marginBottom="391dp">
+        tools:visibility="gone">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -81,12 +90,12 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="43dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="43dp"
                 android:layout_toEndOf="@+id/imagenRuta"
                 android:gravity="center"
                 android:text="@string/destinos_populares"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
             <TextView
                 android:id="@+id/textDestinosPopulares"
@@ -98,7 +107,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="20dp"
                 android:layout_toEndOf="@+id/imagenRuta" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
