--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -62,7 +62,7 @@
         android:layout_marginStart="26dp"
         android:layout_marginTop="90dp"
         android:layout_marginEnd="27dp"
-        tools:visibility="gone">
+        android:visibility="gone">
 
         <RelativeLayout
             android:layout_width="match_parent"
