Se añadió la funcionalidad de mostrar la imagen del autobús según la ruta elegida, se añadieron todas las imagenes de las rutas actualmente disponibles

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -79,7 +79,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
                 android:contentDescription="@string/ImagenBus"
-                app:srcCompat="@drawable/googleg_standard_color_18"
+                app:srcCompat="@drawable/default_ruta"
                 tools:ignore="ImageContrastCheck"
                 tools:srcCompat="@tools:sample/avatars" />
 
