Se modificó el TextView donde se muestran los destinos populares a fin de brindar más espacio para el texto

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -55,7 +55,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardInfoRutas"
         android:layout_width="wrap_content"
-        android:layout_height="150dp"
+        android:layout_height="200dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
@@ -89,9 +89,9 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginStart="43dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginEnd="43dp"
+                android:layout_marginEnd="20dp"
                 android:layout_toEndOf="@+id/imagenRuta"
                 android:gravity="center"
                 android:text="@string/destinos_populares"
@@ -108,7 +108,8 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="20dp"
-                android:layout_toEndOf="@+id/imagenRuta" />
+                android:layout_toEndOf="@+id/imagenRuta"
+                android:gravity="center" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
