--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -120,14 +120,15 @@
         android:layout_alignBottom="@+id/ver_rutas"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="4dp"
-        android:layout_marginBottom="506dp"
+        android:layout_marginBottom="185dp"
         android:backgroundTint="@color/white"
         android:clickable="true"
         android:contentDescription="@string/reiniciarMapa"
         android:focusable="true"
         android:visibility="gone"
         app:backgroundTint="@color/white"
-        app:srcCompat="@drawable/reiniciaricon" />
+        app:srcCompat="@drawable/reiniciaricon"
+        app:tintMode="@color/white" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/botonLimpiarMapa"
@@ -136,12 +137,13 @@
         android:layout_alignBottom="@+id/ver_rutas"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="4dp"
-        android:layout_marginBottom="436dp"
+        android:layout_marginBottom="116dp"
         android:backgroundTint="@color/white"
         android:clickable="true"
         android:contentDescription="@string/limpiarMapa"
         android:focusable="true"
         android:visibility="visible"
         app:backgroundTint="@color/white"
-        app:srcCompat="@drawable/cleanicon" />
+        app:srcCompat="@drawable/cleanicon"
+        app:tintMode="@color/white"/>
 </RelativeLayout>
